# seedcase_deploy

./: .dockerignore  .gitignore  Dockerfile  build.sh  entrypoint-with-tls.sh  entrypoint.sh  fly-pr.toml  fly.toml  manage.py  pyproject.toml  readme.md  requirements.txt  vercel.json
.github/workflows/: continuous-integration.yml  pipeline-continuous-integration.yml  pipeline-docker-build.yml
app/: tests.py  views.py
app/templates/: hello.html
seedcase_deploy/: asgi.py  settings.py  urls.py  wsgi.py
