[tool.poetry]
name = "seedcase-deploy"
version = "0.1.0"
description = "Project for testing different cloud services"
authors = ["Philip Hjorth Christiansen <pch@mjolner.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.8"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
